layout i zmiana płyt

--- a/static/index.html
+++ b/static/index.html
@@ -9,9 +9,12 @@
   </head>
   <body>
     <div class="container">
-      <aside class="aside"></aside>
-      <div class="main-content">
-        <h1 class="main-content__header">pecify</h1>
+      <div class="albumsAndSongs">
+        <aside class="aside" id="albumList"></aside>
+        <div class="main-content">
+          <h1 class="main-content__header">pecify</h1>
+          <div class="songList" id="songList"></div>
+        </div>
       </div>
       <div class="player"></div>
     </div>
